[gd_scene load_steps=8 format=2]

[ext_resource path="res://Objects/MouseSpawner.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/GUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Resources/Scripts/GameLogic.gd" type="Script" id=3]
[ext_resource path="res://Objects/Cheese.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objects/Mouse.tscn" type="PackedScene" id=5]
[ext_resource path="res://Objects/GuiObjects/PauseMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://Objects/GuiObjects/StartMenu.tscn" type="PackedScene" id=7]

[node name="GameScene" type="Node"]
script = ExtResource( 3 )
Difficult = 2
CheesePath = NodePath("GameObjects/Cheese")

[node name="LogicObjects" type="Node" parent="."]

[node name="MouseSpawner" parent="LogicObjects" instance=ExtResource( 1 )]
SpawnPeriod = 0.8
MouseObject = ExtResource( 5 )
MainScenePath = NodePath("../../GameObjects")
Cheese = NodePath("../../GameObjects/Cheese")

[node name="WinTimer" type="Timer" parent="LogicObjects"]
wait_time = 20.0

[node name="GameObjects" type="Node2D" parent="."]
scale = Vector2( 1, 0.995926 )

[node name="Cheese" parent="GameObjects" instance=ExtResource( 4 )]
position = Vector2( 532.779, 236.683 )
scale = Vector2( 0.630462, 0.630462 )

[node name="GUI" parent="." instance=ExtResource( 2 )]
rect_scale = Vector2( 1.01362, 1 )
mouse_filter = 2
PauseMenuScene = ExtResource( 6 )
StartMenuScene = ExtResource( 7 )

[connection signal="timeout" from="LogicObjects/WinTimer" to="." method="_on_WinTimer_timeout"]
